--- a/keycastow.vcxproj
+++ b/keycastow.vcxproj
@@ -20,6 +20,9 @@
   <ItemGroup>
     <ResourceCompile Include="keycastow.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="keycastow.ico" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{D9A196AF-F63D-4E8E-8724-9364FD8EB4D4}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
